--- a/post-02/index.html
+++ b/post-02/index.html
@@ -102,8 +102,8 @@
         
       </ul>
     </section> <!-- End Section Contact -->
-    <div class="copyright">
-      <p>2021 &copy; Negative Charge</p>
+    <div class="about">
+      <p>2021 Negative Charge</p>
     </div>
   </footer> <!-- End Footer -->
 </aside> <!-- End Sidebar -->
