Update posts with emulation links

--- a/post-01/index.html
+++ b/post-01/index.html
@@ -144,6 +144,8 @@
 
 <p><a href="https://negativecharge.github.io/files/beebymtunes-04.ssd">Download</a></p>
 
+<p><a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/beebymtunes-04.ssd">Emulate</a></p>
+
       <div class="page-footer">
         <div class="page-share">
           <a href="https://twitter.com/intent/tweet?text=BBC Micro YM2149 Tunes 4&url=https://negativecharge.github.io/post-01/" title="Share on Twitter" rel="nofollow" target="_blank">Twitter</a>
