--- a/post-03/index.html
+++ b/post-03/index.html
@@ -142,6 +142,8 @@
 
 <p><a href="https://negativecharge.github.io/files/beebymtunes-02.ssd">Download</a></p>
 
+<p><a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/beebymtunes-02.ssd">Emulate</a></p>
+
       <div class="page-footer">
         <div class="page-share">
           <a href="https://twitter.com/intent/tweet?text=BBC Micro YM2149 Tunes 2&url=https://negativecharge.github.io/post-03/" title="Share on Twitter" rel="nofollow" target="_blank">Twitter</a>
