--- a/post-04/index.html
+++ b/post-04/index.html
@@ -12,7 +12,7 @@
     <meta content="article" property="og:type">
   
   
-    <meta content="A selection of game music conversions to the SN76489" property="og:description">
+    <meta content="A selection of demo music conversions to the SN76489" property="og:description">
   
   
     <meta content="https://negativecharge.github.io/post-04/" property="og:url">
@@ -49,13 +49,13 @@
     <meta name="twitter:url" content="https://negativecharge.github.io/post-04/">
   
   
-    <meta name="twitter:description" content="A selection of game music conversions to the SN76489">
+    <meta name="twitter:description" content="A selection of demo music conversions to the SN76489">
   
   
     <meta name="twitter:image:src" content="https://negativecharge.github.io/assets/img/ym2149-01.png">
   
 
-	<meta name="description" content="A selection of game music conversions to the SN76489">
+	<meta name="description" content="A selection of demo music conversions to the SN76489">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta property="og:image" content="">
@@ -143,6 +143,8 @@
 </code></p>
 
 <p><a href="https://negativecharge.github.io/files/beebymtunes-01.ssd">Download</a></p>
+
+<p><a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/beebymtunes-01.ssd">Emulate</a></p>
 
       <div class="page-footer">
         <div class="page-share">
