--- a/post-06/index.html
+++ b/post-06/index.html
@@ -141,6 +141,7 @@
 
 <p><a href="https://negativecharge.github.io/files/beebaytunes-02.ssd">Download</a></p>
 
+<p><a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/beebaytunes-02.ssd">Emulate</a></p>
 
       <div class="page-footer">
         <div class="page-share">
