--- a/post-08/index.html
+++ b/post-08/index.html
@@ -146,6 +146,8 @@
 
 <p><a href="https://negativecharge.github.io/files/beebsidtunes-10.ssd">Download</a></p>
 
+<p><a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/beebsidtunes-10.ssd">Emulate</a></p>
+
       <div class="page-footer">
         <div class="page-share">
           <a href="https://twitter.com/intent/tweet?text=BBC Micro SID Tunes 10&url=https://negativecharge.github.io/post-08/" title="Share on Twitter" rel="nofollow" target="_blank">Twitter</a>
