--- a/post-11/index.html
+++ b/post-11/index.html
@@ -12,7 +12,7 @@
     <meta content="article" property="og:type">
   
   
-    <meta content="A selection of demo scene music conversions to the SN76489" property="og:description">
+    <meta content="A selection of game music conversions to the SN76489" property="og:description">
   
   
     <meta content="https://negativecharge.github.io/post-11/" property="og:url">
@@ -51,13 +51,13 @@
     <meta name="twitter:url" content="https://negativecharge.github.io/post-11/">
   
   
-    <meta name="twitter:description" content="A selection of demo scene music conversions to the SN76489">
+    <meta name="twitter:description" content="A selection of game music conversions to the SN76489">
   
   
     <meta name="twitter:image:src" content="https://negativecharge.github.io/assets/img/sid-07.png">
   
 
-	<meta name="description" content="A selection of demo scene music conversions to the SN76489">
+	<meta name="description" content="A selection of game music conversions to the SN76489">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta property="og:image" content="">
