--- a/post-02/index.html
+++ b/post-02/index.html
@@ -102,7 +102,7 @@
         
       </ul>
     </section> <!-- End Section Contact -->
-    <div class="about">
+    <div class="copyright">
       <p>2021 Negative Charge</p>
     </div>
   </footer> <!-- End Footer -->
