--- a/post-13/index.html
+++ b/post-13/index.html
@@ -104,7 +104,7 @@
         
       </ul>
     </section> <!-- End Section Contact -->
-    <div class="about">
+    <div class="copyright">
       <p>2021 Negative Charge</p>
     </div>
   </footer> <!-- End Footer -->
