--- a/post-16/index.html
+++ b/post-16/index.html
@@ -136,11 +136,11 @@
 &nbsp;7) Shadow Warriors..............
 &nbsp;8) Alloyrun.....................
 &nbsp;9) Golden Axe...................
-10) Turrican..........................
-11) Green Beret.......................
-12) Crazy Comets......................
-13) Zoids.............................
-14) Total Recall......................
+10) Turrican....................
+11) Green Beret.................
+12) Crazy Comets................
+13) Zoids.......................
+14) Total Recall................
 </code></p>
 
 <p><a href="https://negativecharge.github.io/files/beebsidtunes-02.ssd">Download</a></p>
