Fix further formatting issue

--- a/post-15/index.html
+++ b/post-15/index.html
@@ -127,20 +127,20 @@
       </header>
       <p>A selection of game music conversions from the Commodore 64's SID to the BBC Micro's SN76489.
 <br /><br /><br /><code>
-&nbsp;1) Parallax.....................
-&nbsp;2) Rambo: First Blood Part II...
-&nbsp;3) The Great Giana Sisters......
-&nbsp;4) Dan Dare III.................
-&nbsp;5) Lemmings - Track 3...........
-&nbsp;6) Myth.........................
-&nbsp;7) One Man and his Droid........
-&nbsp;8) Sanxion - Loader.............
-&nbsp;9) Auf Wiedersehen Monty........
-10) The Last V8..................
-11) Dragon Ninja.................
-12) Last Ninja 3 - Intro.........
-13) Mutants......................
-14) Comic Bakery.................
+&nbsp;1) Parallax.....................<br />
+&nbsp;2) Rambo: First Blood Part II...<br />
+&nbsp;3) The Great Giana Sisters......<br />
+&nbsp;4) Dan Dare III.................<br />
+&nbsp;5) Lemmings - Track 3...........<br />
+&nbsp;6) Myth.........................<br />
+&nbsp;7) One Man and his Droid........<br />
+&nbsp;8) Sanxion - Loader.............<br />
+&nbsp;9) Auf Wiedersehen Monty........<br />
+10) The Last V8..................<br />
+11) Dragon Ninja.................<br />
+12) Last Ninja 3 - Intro.........<br />
+13) Mutants......................<br />
+14) Comic Bakery.................<br />
 </code></p>
 
 <p><a href="https://negativecharge.github.io/files/beebsidtunes-03.ssd">Download</a></p>
