--- a/post-16/index.html
+++ b/post-16/index.html
@@ -127,20 +127,20 @@
       </header>
       <p>A selection of game music conversions from the Commodore 64's SID to the BBC Micro's SN76489.
 <br /><br /><br /><code>
-&nbsp;1) Glider Rider.................
-&nbsp;2) Supremacy....................
-&nbsp;3) Red Max......................
-&nbsp;4) Speedball 2..................
-&nbsp;5) Airwolf......................
-&nbsp;6) Ghouls 'n Ghosts - Track 2...
-&nbsp;7) Shadow Warriors..............
-&nbsp;8) Alloyrun.....................
-&nbsp;9) Golden Axe...................
-10) Turrican....................
-11) Green Beret.................
-12) Crazy Comets................
-13) Zoids.......................
-14) Total Recall................
+&nbsp;1) Glider Rider.................<br />
+&nbsp;2) Supremacy....................<br />
+&nbsp;3) Red Max......................<br />
+&nbsp;4) Speedball 2..................<br />
+&nbsp;5) Airwolf......................<br />
+&nbsp;6) Ghouls 'n Ghosts - Track 2...<br />
+&nbsp;7) Shadow Warriors..............<br />
+&nbsp;8) Alloyrun.....................<br />
+&nbsp;9) Golden Axe...................<br />
+10) Turrican.....................<br />
+11) Green Beret..................<br />
+12) Crazy Comets.................<br />
+13) Zoids........................<br />
+14) Total Recall.................<br />
 </code></p>
 
 <p><a href="https://negativecharge.github.io/files/beebsidtunes-02.ssd">Download</a></p>
