--- a/post-17/index.html
+++ b/post-17/index.html
@@ -136,7 +136,7 @@
 &nbsp;7) Speedball....................<br />
 &nbsp;8) Cybernoid II.................<br />
 &nbsp;9) Last Ninja: Wastelands Loader<br />
-10) Last Ninja: Wilderness............<br />
+10) Last Ninja: Wilderness.......<br />
 11) Batman the Movie.............<br />
 12) International Karate.........<br />
 13) R-Type.......................<br />
