--- a/post-32/index.html
+++ b/post-32/index.html
@@ -121,21 +121,21 @@
       </header>
       <p>BBC Micro Tunes 1.
 <br /><br /><br /><code>
-&nbsp;1) Crazee Rider - Title.........",13
-&nbsp;2) Galaforce - Title............",13
-&nbsp;3) Galaforce 2 - Title..........",13
-&nbsp;4) Galaforce 2 - High Score.....",13
-&nbsp;5) Stryker's Run - Title........",13
-&nbsp;6) Firetrack - Loader...........",13
-&nbsp;7) Firetrack - In-Game..........",13
-&nbsp;8) Icarus.......................",13
-&nbsp;9) Dare Devil Dennis............",13
-10) Codename: Droid..............",13
-11) Space Debris - B-Tracker.....",13
-12) Addicts&apos; Anthem...Daniel Pugh",13
-13) Hydroxide.........Daniel Pugh",13
-14) Messed Up Hair....Daniel Pugh",13
-15) The Hacker - Loader..........",13
+&nbsp;1) Crazee Rider - Title.........<br />
+&nbsp;2) Galaforce - Title............<br />
+&nbsp;3) Galaforce 2 - Title..........<br />
+&nbsp;4) Galaforce 2 - High Score.....<br />
+&nbsp;5) Stryker's Run - Title........<br />
+&nbsp;6) Firetrack - Loader...........<br />
+&nbsp;7) Firetrack - In-Game..........<br />
+&nbsp;8) Icarus.......................<br />
+&nbsp;9) Dare Devil Dennis............<br />
+10) Codename: Droid..............<br />
+11) Space Debris - B-Tracker.....<br />
+12) Addicts&apos; Anthem...Daniel Pugh<br />
+13) Hydroxide.........Daniel Pugh<br />
+14) Messed Up Hair....Daniel Pugh<br />
+15) The Hacker - Loader..........<br />
 </code></p>
 
 <p><a href="https://negativecharge.github.io/files/beebtunes-01.ssd">Download</a></p>
