--- a/post-30/index.html
+++ b/post-30/index.html
@@ -148,6 +148,8 @@
 
 <p><a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/beebsidtunes-14.ssd">Emulate</a></p>
 
+<p><a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/beebsidtunes-14.ssd">Virtual Beeb</a></p>
+
       <div class="page-footer">
         <div class="page-share">
           <a href="https://twitter.com/intent/tweet?text=BBC Micro SID Tunes 14&url=https://negativecharge.github.io/post-30/" title="Share on Twitter" rel="nofollow" target="_blank">Twitter</a>
