--- a/post-28/index.html
+++ b/post-28/index.html
@@ -142,6 +142,8 @@
 
 <p><a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/beebsmstunes-01.ssd">Emulate</a></p>
 
+<p><a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/beebsmstunes-01.ssd">Virtual Beeb</a></p>
+
       <div class="page-footer">
         <div class="page-share">
           <a href="https://twitter.com/intent/tweet?text=BBC Micro Sega Master System Tunes 1&url=https://negativecharge.github.io/post-28/" title="Share on Twitter" rel="nofollow" target="_blank">Twitter</a>
