--- a/post-31/index.html
+++ b/post-31/index.html
@@ -148,6 +148,8 @@
 
 <p><a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/beebcpctunes-02.ssd">Emulate</a></p>
 
+<p><a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/beebcpctunes-02.ssd">Virtual Beeb</a></p>
+
       <div class="page-footer">
         <div class="page-share">
           <a href="https://twitter.com/intent/tweet?text=BBC Micro Amstrad CPC Tunes 2&url=https://negativecharge.github.io/post-31/" title="Share on Twitter" rel="nofollow" target="_blank">Twitter</a>
