--- a/post-33/index.html
+++ b/post-33/index.html
@@ -148,6 +148,8 @@
 
 <p><a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/beebaytunes-04.ssd">Emulate</a></p>
 
+<p><a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/beebay-tunes-04.ssd">Virtual Beeb</a></p>
+
       <div class="page-footer">
         <div class="page-share">
           <a href="https://twitter.com/intent/tweet?text=BBC Micro AY-3-8910 Tunes 4&url=https://negativecharge.github.io/post-33/" title="Share on Twitter" rel="nofollow" target="_blank">Twitter</a>
