--- a/post-33/index.html
+++ b/post-33/index.html
@@ -148,7 +148,7 @@
 
 <p><a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/beebaytunes-04.ssd">Emulate</a></p>
 
-<p><a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/beebay-tunes-04.ssd">Virtual Beeb</a></p>
+<p><a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/beebaytunes-04.ssd">Virtual Beeb</a></p>
 
       <div class="page-footer">
         <div class="page-share">
