--- a/post-21/index.html
+++ b/post-21/index.html
@@ -142,6 +142,8 @@
 
 <p><a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/last_ninja.ssd">Emulate</a></p>
 
+<p><a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/last_ninja.ssd">Virtual Beeb</a></p>
+
       <div class="page-footer">
         <div class="page-share">
           <a href="https://twitter.com/intent/tweet?text=The Last Ninja&url=https://negativecharge.github.io/post-21/" title="Share on Twitter" rel="nofollow" target="_blank">Twitter</a>
