--- a/post-22/index.html
+++ b/post-22/index.html
@@ -141,6 +141,8 @@
 
 <p><a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/batman-the-movie_music.ssd">Emulate</a></p>
 
+<p><a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/batman-the-movie_music.ssd">Virtual Beeb</a></p>
+
       <div class="page-footer">
         <div class="page-share">
           <a href="https://twitter.com/intent/tweet?text=Batman The Movie&url=https://negativecharge.github.io/post-22/" title="Share on Twitter" rel="nofollow" target="_blank">Twitter</a>
