--- a/post-02/index.html
+++ b/post-02/index.html
@@ -146,6 +146,8 @@
 
 <p><a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/beebymtunes-03.ssd">Emulate</a></p>
 
+<p><a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/beebymtunes-03.ssd">Virtual Beeb</a></p>
+
       <div class="page-footer">
         <div class="page-share">
           <a href="https://twitter.com/intent/tweet?text=BBC Micro YM2149 Tunes 3&url=https://negativecharge.github.io/post-02/" title="Share on Twitter" rel="nofollow" target="_blank">Twitter</a>
