--- a/post-06/index.html
+++ b/post-06/index.html
@@ -143,6 +143,8 @@
 
 <p><a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/beebaytunes-02.ssd">Emulate</a></p>
 
+<p><a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/beebaytunes-02.ssd">Virtual Beeb</a></p>
+
       <div class="page-footer">
         <div class="page-share">
           <a href="https://twitter.com/intent/tweet?text=BBC Micro AY-3-8910 Tunes 2&url=https://negativecharge.github.io/post-06/" title="Share on Twitter" rel="nofollow" target="_blank">Twitter</a>
