--- a/post-15/index.html
+++ b/post-15/index.html
@@ -147,6 +147,8 @@
 
 <p><a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/beebsidtunes-03.ssd">Emulate</a></p>
 
+<p><a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/beebsidtunes-03.ssd">Virtual Beeb</a></p>
+
       <div class="page-footer">
         <div class="page-share">
           <a href="https://twitter.com/intent/tweet?text=BBC Micro SID Tunes 3&url=https://negativecharge.github.io/post-15/" title="Share on Twitter" rel="nofollow" target="_blank">Twitter</a>
