--- a/post-19/index.html
+++ b/post-19/index.html
@@ -138,6 +138,8 @@
 
 <p><a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/last_ninja_3.ssd">Emulate</a></p>
 
+<p><a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/last_ninja_3.ssd">Virtual Beeb</a></p>
+
       <div class="page-footer">
         <div class="page-share">
           <a href="https://twitter.com/intent/tweet?text=Last Ninja 3&url=https://negativecharge.github.io/post-19/" title="Share on Twitter" rel="nofollow" target="_blank">Twitter</a>
