--- a/post-20/index.html
+++ b/post-20/index.html
@@ -144,6 +144,8 @@
 
 <p><a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/last_ninja_2.ssd">Emulate</a></p>
 
+<p><a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/last_ninja_2.ssd">Virtual Beeb</a></p>
+
       <div class="page-footer">
         <div class="page-share">
           <a href="https://twitter.com/intent/tweet?text=Last Ninja 2&url=https://negativecharge.github.io/post-20/" title="Share on Twitter" rel="nofollow" target="_blank">Twitter</a>
