--- a/post-37/index.html
+++ b/post-37/index.html
@@ -127,78 +127,94 @@
       </header>
       <p>A conversion of the SID Burners 7 music disk from the Commodore 64's SID to the BBC Micro's SN76489.
 <br /><br /><br /><code>
-&nbsp;1. 3545 II.................03:44<br />
-&nbsp;2. Am I Right?.............03:35<br />
-&nbsp;3. Beginning...............03:46<br />
-&nbsp;4. Bell Test...............00:24<br />
-&nbsp;5. Bus (Notemusic).........01:05<br />
-&nbsp;6. Cheyens Megademo #9.....02:34<br />
-&nbsp;7. Church..................02:29<br />
-&nbsp;8. Cockcrusher:Pride of....04:07<br />
-&nbsp;9. Crooner.................01:17<br /></code></p>
-<ol>
-  <li>Das Kanoot…………..02:16<br /></li>
-  <li>Digital Madness End…..01:33<br /></li>
-  <li>Digital Madness Main….03:36<br /></li>
-  <li>Disco Zax……………01:17<br /></li>
-  <li>Dobee……………….02:06<br /></li>
-  <li>Doggy Style………….02:57<br /></li>
-  <li>End Sequence…………01:12<br /></li>
-  <li>End Tune 1…………..03:47<br /></li>
-  <li>Final Countdown………00:23<br /></li>
-  <li>For Hotshot………….00:50<br /></li>
-  <li>Frontpage (Issue 2)…..03:57<br /></li>
-  <li>Funcie………………04:16<br /></li>
-  <li>Fusion………………02:21<br /></li>
-  <li>FX………………….02:34<br /></li>
-  <li>Galway Tune………….08:33<br /></li>
-  <li>Gone………………..01:21<br /></li>
-  <li>Greeky Tune………….02:05<br /></li>
-  <li>Grillette……………06:08<br /></li>
-  <li>Hackpack IV (Menu)……00:23<br /></li>
-  <li>Hello Monty………….05:57<br /></li>
-  <li>High and Low…………01:02<br /></li>
-  <li>Hitsong……………..00:46<br /></li>
-  <li>Infinity…………….02:58<br /></li>
-  <li>Intro Zak……………03:44<br /></li>
-  <li>Jazz Time……………00:46<br /></li>
-  <li>Jedi Ninja…………..01:42<br /></li>
-  <li>Just Cool……………02:14<br /></li>
-  <li>Kalle Kloakk:Part 3…..05:21<br /></li>
-  <li>Koekoek……………..01:24<br /></li>
-  <li>Koeleskab……………04:20<br /></li>
-  <li>La La Link…………..01:33<br /></li>
-  <li>Legend Intro…………02:55<br /></li>
-  <li>Legend of the Sun…….03:05<br /></li>
-  <li>Lion Sleeps………….01:17<br /></li>
-  <li>Middle Age…………..01:17<br /></li>
-  <li>NEI Intro……………03:17<br /></li>
-  <li>Ode to C64…………..02:56<br /></li>
-  <li>Piece of Cake 3………00:24<br /></li>
-  <li>Pleite Geier Intro……00:42<br /></li>
-  <li>R.M. (Edit)………….04:56<br /></li>
-  <li>Robocop……………..01:02<br /></li>
-  <li>Shaolink…………….02:48<br /></li>
-  <li>Soldier of Fortune……03:22<br /></li>
-  <li>Star Dream…………..03:13<br /></li>
-  <li>Street Wise………….01:10<br /></li>
-  <li>Syncopated…………..02:22<br /></li>
-  <li>The Alibi……………03:16<br /></li>
-  <li>Underground………….01:00<br /></li>
-  <li>Untouched……………01:59<br /></li>
-  <li>Wanna Get Sick……….02:42<br /></li>
-  <li>Wild Dreams - 1990……03:21<br />
-&lt;/code&gt;</li>
-</ol>
+&nbsp;1) 3545 II.................03:44<br />
+&nbsp;2) Am I Right?.............03:35<br />
+&nbsp;3) Beginning...............03:46<br />
+&nbsp;4) Bell Test...............00:24<br />
+&nbsp;5) Bus (Notemusic).........01:05<br />
+&nbsp;6) Cheyens Megademo #9.....02:34<br />
+&nbsp;7) Church..................02:29<br />
+&nbsp;8) Cockcrusher:Pride of....04:07<br />
+&nbsp;9) Crooner.................01:17<br />
+10) Das Kanoot..............02:16<br />
+11) Digital Madness End.....01:33<br />
+12) Digital Madness Main....03:36<br />
+13) Disco Zax...............01:17<br />
+14) Dobee...................02:06<br />
+15) Doggy Style.............02:57<br />
+16) End Sequence............01:12<br />
+17) End Tune 1..............03:47<br />
+18) Final Countdown.........00:23<br />
+19) For Hotshot.............00:50<br />
+20) Frontpage (Issue 2).....03:57<br />
+21) Funcie..................04:16<br />
+22) Fusion..................02:21<br />
+23) FX......................02:34<br />
+24) Galway Tune.............08:33<br />
+25) Gone....................01:21<br />
+26) Greeky Tune.............02:05<br />
+27) Grillette...............06:08<br />
+28) Hackpack IV (Menu)......00:23<br />
+29) Hello Monty.............05:57<br />
+30) High and Low............01:02<br />
+31) Hitsong.................00:46<br />
+32) Infinity................02:58<br />
+33) Intro Zak...............03:44<br />
+34) Jazz Time...............00:46<br />
+35) Jedi Ninja..............01:42<br />
+36) Just Cool...............02:14<br />
+37) Kalle Kloakk:Part 3.....05:21<br />
+38) Koekoek.................01:24<br />
+39) Koeleskab...............04:20<br />
+40) La La Link..............01:33<br />
+41) Legend Intro............02:55<br />
+42) Legend of the Sun.......03:05<br />
+43) Lion Sleeps.............01:17<br />
+44) Middle Age..............01:17<br />
+45) NEI Intro...............03:17<br />
+46) Ode to C64..............02:56<br />
+47) Piece of Cake 3.........00:24<br />
+48) Pleite Geier Intro......00:42<br />
+49) R.M) (Edit).............04:56<br />
+50) Robocop.................01:02<br />
+51) Shaolink................02:48<br />
+52) Soldier of Fortune......03:22<br />
+53) Star Dream..............03:13<br />
+54) Street Wise.............01:10<br />
+55) Syncopated..............02:22<br />
+56) The Alibi...............03:16<br />
+57) Underground.............01:00<br />
+58) Untouched...............01:59<br />
+59) Wanna Get Sick..........02:42<br />
+60) Wild Dreams - 1990......03:21<br />
+</code></p>
 
-<p><a href="https://negativecharge.github.io/files/sidburners_7_P1.dsd">Download Disk 1</a>
-<a href="https://negativecharge.github.io/files/sidburners_7_P2.dsd">Download Disk 2</a></p>
+<table>
+  <tbody>
+    <tr>
+      <td><a href="https://negativecharge.github.io/files/sidburners_7_P1.dsd">Download Disk 1</a></td>
+      <td><a href="https://negativecharge.github.io/files/sidburners_7_P2.dsd">Download Disk 2</a><br /></td>
+    </tr>
+  </tbody>
+</table>
 
-<p><a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/sidburners_7_P1.dsd">Emulate Disk 1</a>
-<a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/sidburners_7_P2.dsd">Emulate Disk 1</a></p>
+<table>
+  <tbody>
+    <tr>
+      <td><a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/sidburners_7_P1.dsd">Emulate Disk 1</a></td>
+      <td><a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/sidburners_7_P2.dsd">Emulate Disk 1</a><br /></td>
+    </tr>
+  </tbody>
+</table>
 
-<p><a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/sidburners_7_P1.dsd">VirtualBeeb Disk 1</a>
-<a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/sidburners_7_P2.dsd">VirtualBeeb Disk 2</a></p>
+<table>
+  <tbody>
+    <tr>
+      <td><a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/sidburners_7_P1.dsd">VirtualBeeb Disk 1</a></td>
+      <td><a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/sidburners_7_P2.dsd">VirtualBeeb Disk 2</a></td>
+    </tr>
+  </tbody>
+</table>
 
       <div class="page-footer">
         <div class="page-share">
