--- a/post-39/index.html
+++ b/post-39/index.html
@@ -123,7 +123,7 @@
       </header>
       <p>The Epic Commodore C64 SID Collection converted to the BBC Micro's SN76489.
 <br /><br /><br /><code>
-&nbsp;01 Space Debris            04:54<br /><strong>SECTOR 1</strong><br /><br />
+<strong>SECTOR 1</strong><br />
 &nbsp;Tune Nr. 2...............01:32<br />
 &nbsp;D.Y.S.P.I.D.C.E. Part 2..01:01<br />
 &nbsp;For Shining 8............01:01<br />
@@ -156,7 +156,7 @@
 &nbsp;BraveStarr...............03:31<br />
 &nbsp;Contest Demo (part 4)....03:55<br />
 &nbsp;Spellbound...............05:42<br />
-<br /><br /><strong>SECTOR 2</strong><br /><br />
+<br /><br /><strong>SECTOR 2</strong><br />
 &nbsp;Sampler 1................03:32<br />
 &nbsp;One Man and His Droid....05:48<br />
 &nbsp;The Last Starfighter.....01:57<br />
@@ -178,7 +178,7 @@
 &nbsp;Phantoms of the Asteroid.04:16<br />
 &nbsp;K.A.O.S..................04:25<br />
 &nbsp;Comic Bakery.............03:10<br />
-<br /><br /><strong>SECTOR 3</strong><br /><br />
+<br /><br /><strong>SECTOR 3</strong><br />
 &nbsp;Think Twice III (Edit)...06:48<br />
 &nbsp;R.I.S.K..................03:14<br />
 &nbsp;M.A.C.H..................03:04<br />
@@ -194,7 +194,7 @@
 &nbsp;Driller..................10:13<br />
 &nbsp;Green Beret..............03:47<br />
 &nbsp;Miami Vice (Edit)........10:01<br />
-<br /><br /><strong>SECTOR 4</strong><br /><br />
+<br /><br /><strong>SECTOR 4</strong><br />
 &nbsp;Stormlord (Edit).........06:00<br />
 &nbsp;Arkanoid (Edit)..........01:35<br />
 &nbsp;I-Ball (Edit)............04:58<br />
@@ -212,7 +212,7 @@
 &nbsp;Erebus...................01:01<br />
 &nbsp;Dexion Demo..............03:57<br />
 &nbsp;Crocket&apos;s Mix (Edit).....05:46<br />
-<br /><br /><strong>SECTOR 5</strong><br /><br />
+<br /><br /><strong>SECTOR 5</strong><br />
 &nbsp;Supremacy................03:50<br />
 &nbsp;Kaos.....................02:25<br />
 &nbsp;The Cat..................03:27<br />
@@ -233,7 +233,7 @@
 &nbsp;Jippie...................01:07<br />
 &nbsp;Scorpion.................03:03<br />
 &nbsp;Nefarious................04:30<br />
-<br /><br /><strong>SECTOR 6</strong><br /><br />
+<br /><br /><strong>SECTOR 6</strong><br />
 &nbsp;Battle Valley (Edit).....05:00<br />
 &nbsp;Panther..................02:04<br />
 &nbsp;Platoon..................02:02<br />
@@ -256,7 +256,7 @@
 &nbsp;Fist II: The Legend Cont.01:01<br />
 &nbsp;Enlightenment: Druid II..01:17<br />
 &nbsp;The Last Ninja...........04:37<br />
-<br /><br /><strong>SECTOR 7</strong><br /><br />
+<br /><br /><strong>SECTOR 7</strong><br />
 &nbsp;Armalyte.................03:32<br />
 &nbsp;Auf Wiedersehen Monty....05:59<br />
 &nbsp;The Last V8..............02:19<br />
@@ -278,7 +278,7 @@
 &nbsp;Savage (Edit)............05:00<br />
 &nbsp;Platou...................03:35<br />
 &nbsp;Ikari Intro..............01:25<br />
-<br /><br /><strong>SECTOR 8</strong><br /><br />	
+<br /><br /><strong>SECTOR 8</strong><br />
 &nbsp;Hawkeye..................06:23<br />
 &nbsp;Last Ninja 3: Intro Tune.04:46<br />
 &nbsp;Platoon..................03:09<br />
@@ -298,7 +298,7 @@
 &nbsp;IK (Edit)................07:00<br />
 &nbsp;Firelord.................00:22<br />
 &nbsp;Defender of the Crown....01:00<br />
-<br /><br /><strong>SECTOR 9</strong><br /><br />
+<br /><br /><strong>SECTOR 9</strong><br />
 &nbsp;RoboCop 3................03:55<br />
 &nbsp;Double Dragon............03:12<br />
 &nbsp;Cybernoid II.............05:45<br />
@@ -317,7 +317,7 @@
 &nbsp;Soldier of Light.........01:02<br />
 &nbsp;Rambo First Blood Part 2.03:03<br />
 &nbsp;Sanxion..................05:33<br />
-<br /><br /><strong>SECTOR 10</strong><br /><br />
+<br /><br /><strong>SECTOR 10</strong><br />
 &nbsp;Double Density Commercial.4:05<br />
 &nbsp;Flip the Flop.............2:29<br />
 &nbsp;Beastie Boys Intro Music..2:11<br />
