--- a/post-39/index.html
+++ b/post-39/index.html
@@ -343,56 +343,11 @@
 &nbsp;Saxophone.................2:50<br />
 </code></p>
 
-<table>
-  <tbody>
-    <tr>
-      <td><a href="https://negativecharge.github.io/files/epic_sid_collection_sector_1.dsd">Download Disk 1</a></td>
-      <td><a href="https://negativecharge.github.io/files/epic_sid_collection_sector_2.dsd">Download Disk 2</a></td>
-      <td><a href="https://negativecharge.github.io/files/epic_sid_collection_sector_3.dsd">Download Disk 3</a></td>
-      <td><a href="https://negativecharge.github.io/files/epic_sid_collection_sector_4.dsd">Download Disk 4</a></td>
-      <td><a href="https://negativecharge.github.io/files/epic_sid_collection_sector_5.dsd">Download Disk 5</a></td>
-      <td><a href="https://negativecharge.github.io/files/epic_sid_collection_sector_6.dsd">Download Disk 6</a></td>
-      <td><a href="https://negativecharge.github.io/files/epic_sid_collection_sector_7.dsd">Download Disk 7</a></td>
-      <td><a href="https://negativecharge.github.io/files/epic_sid_collection_sector_8.dsd">Download Disk 8</a></td>
-      <td><a href="https://negativecharge.github.io/files/epic_sid_collection_sector_9.dsd">Download Disk 9</a></td>
-      <td><a href="https://negativecharge.github.io/files/epic_sid_collection_sector_10.dsd">Download Disk 10</a><br /></td>
-    </tr>
-  </tbody>
-</table>
-
-<table>
-  <tbody>
-    <tr>
-      <td><a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_1.dsd">Emulate Disk 1</a></td>
-      <td><a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_2.dsd">Emulate Disk 2</a></td>
-      <td><a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_3.dsd">Emulate Disk 3</a></td>
-      <td><a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_4.dsd">Emulate Disk 4</a></td>
-      <td><a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_5.dsd">Emulate Disk 5</a></td>
-      <td><a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_6.dsd">Emulate Disk 6</a></td>
-      <td><a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_7.dsd">Emulate Disk 7</a></td>
-      <td><a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_8.dsd">Emulate Disk 8</a></td>
-      <td><a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_9.dsd">Emulate Disk 9</a></td>
-      <td><a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_10.dsd">Emulate Disk 10</a><br /></td>
-    </tr>
-  </tbody>
-</table>
-
-<table>
-  <tbody>
-    <tr>
-      <td><a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_1.dsd">VirtualBeeb Disk 1</a></td>
-      <td><a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_2.dsd">VirtualBeeb Disk 2</a></td>
-      <td><a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_3.dsd">VirtualBeeb Disk 3</a></td>
-      <td><a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_4.dsd">VirtualBeeb Disk 4</a></td>
-      <td><a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_5.dsd">VirtualBeeb Disk 5</a></td>
-      <td><a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_6.dsd">VirtualBeeb Disk 6</a></td>
-      <td><a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_7.dsd">VirtualBeeb Disk 7</a></td>
-      <td><a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_8.dsd">VirtualBeeb Disk 8</a></td>
-      <td><a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_9.dsd">VirtualBeeb Disk 9</a></td>
-      <td><a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_10.dsd">VirtualBeeb Disk 10</a></td>
-    </tr>
-  </tbody>
-</table>
+<p><a href="https://negativecharge.github.io/files/epic_sid_collection_sector_1.dsd">Download Disk 1</a> | <a href="https://negativecharge.github.io/files/epic_sid_collection_sector_2.dsd">Download Disk 2</a> | <a href="https://negativecharge.github.io/files/epic_sid_collection_sector_3.dsd">Download Disk 3</a> | <a href="https://negativecharge.github.io/files/epic_sid_collection_sector_4.dsd">Download Disk 4</a> | <a href="https://negativecharge.github.io/files/epic_sid_collection_sector_5.dsd">Download Disk 5</a> <br /> <a href="https://negativecharge.github.io/files/epic_sid_collection_sector_6.dsd">Download Disk 6</a> | <a href="https://negativecharge.github.io/files/epic_sid_collection_sector_7.dsd">Download Disk 7</a> | <a href="https://negativecharge.github.io/files/epic_sid_collection_sector_8.dsd">Download Disk 8</a> | <a href="https://negativecharge.github.io/files/epic_sid_collection_sector_9.dsd">Download Disk 9</a> | <a href="https://negativecharge.github.io/files/epic_sid_collection_sector_10.dsd">Download Disk 10</a><br />
+<br />
+<a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_1.dsd">Emulate Disk 1</a> | <a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_2.dsd">Emulate Disk 2</a> | <a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_3.dsd">Emulate Disk 3</a> | <a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_4.dsd">Emulate Disk 4</a> | <a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_5.dsd">Emulate Disk 5</a> <br /> <a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_6.dsd">Emulate Disk 6</a> | <a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_7.dsd">Emulate Disk 7</a> | <a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_8.dsd">Emulate Disk 8</a> | <a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_9.dsd">Emulate Disk 9</a> | <a href="https://negativecharge.github.io/jsbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_10.dsd">Emulate Disk 10</a><br />
+<br />
+<a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_1.dsd">VirtualBeeb Disk 1</a> | <a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_2.dsd">VirtualBeeb Disk 2</a> | <a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_3.dsd">VirtualBeeb Disk 3</a> | <a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_4.dsd">VirtualBeeb Disk 4</a> | <a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_5.dsd">VirtualBeeb Disk 5</a> <br /> <a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_6.dsd">VirtualBeeb Disk 6</a> | <a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_7.dsd">VirtualBeeb Disk 7</a> | <a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_8.dsd">VirtualBeeb Disk 8</a> | <a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_9.dsd">VirtualBeeb Disk 9</a> | <a href="https://negativecharge.github.io/virtualbeeb/?autoboot&amp;disc1=https://negativecharge.github.io/files/epic_sid_collection_sector_10.dsd">VirtualBeeb Disk 10</a></p>
 
       <div class="page-footer">
         <div class="page-share">
