--- a/post-42/index.html
+++ b/post-42/index.html
@@ -141,30 +141,28 @@
       </header>
       <p>A selection of music conversions from Revision 2022 entries to the BBC Micro's SN76489.
 <br /><br /><br /><code>
-&nbsp;1. ReACtion: Abyss-Connection....<br />
-&nbsp;2. Recycle Bin: Vincenzo.........<br />
-&nbsp;3. Sucisap: Mutetus..............<br />
-&nbsp;4. Quarantine: Proton............<br />
-&nbsp;5. Lockdown Pop 2: Fegolhuzz/Qdor<br />
-&nbsp;6. Prayer for Chiptunes: Defilus.<br />
-&nbsp;7. Don&apos;t Give Up: Aki............<br />
-&nbsp;8. Mechaboy: Uctumi..............<br />
-&nbsp;9. Latest Revision: Jammer.......<br /></code></p>
-<ol>
-  <li>One Raving POKEY…: Triace…<br /></li>
-  <li>Salvaged: mA2E &amp; Mibri……..<br /></li>
-  <li>Anthology: BabyGang………..<br /></li>
-  <li>Bitsy Bigly: Onslaught……..<br /></li>
-  <li>Quattuor: Darklite &amp; Offence..<br /></li>
-  <li>4k Love Not War: Excess…….<br /></li>
-  <li>Salvaged Intro: Mibri………<br /></li>
-  <li>Open Space: Vanity…………<br /></li>
-  <li>Swingin': AST &amp; Bug Powell….<br /></li>
-  <li>Pixel Free: Plissken……….<br /></li>
-  <li>4k Memories: Leonard/Jess…..<br /></li>
-  <li>Tendonin: Rebels…………..<br />
-&lt;/code&gt;</li>
-</ol>
+&nbsp;1) ReACtion: Abyss-Connection....<br />
+&nbsp;2) Recycle Bin: Vincenzo.........<br />
+&nbsp;3) Sucisap: Mutetus..............<br />
+&nbsp;4) Quarantine: Proton............<br />
+&nbsp;5) Lockdown Pop 2: Fegolhuzz/Qdor<br />
+&nbsp;6) Prayer for Chiptunes: Defilus.<br />
+&nbsp;7) Don&apos;t Give Up: Aki............<br />
+&nbsp;8) Mechaboy: Uctumi..............<br />
+&nbsp;9) Latest Revision: Jammer.......<br />
+10) One Raving POKEY...: Triace...<br />
+11) Salvaged: mA2E &amp; Mibri........<br />
+12) Anthology: BabyGang...........<br />
+13) Bitsy Bigly: Onslaught........<br />
+14) Quattuor: Darklite &amp; Offence..<br />
+15) 4k Love Not War: Excess.......<br />
+16) Salvaged Intro: Mibri.........<br />
+17) Open Space: Vanity............<br />
+18) Swingin&apos;: AST &amp; Bug Powell....<br />
+19) Pixel Free: Plissken..........<br />
+20) 4k Memories: Leonard/Jess.....<br />
+21) Tendonin: Rebels..............<br />
+</code></p>
 
 <p><a href="https://negativecharge.github.io/files/revision-2022.dsd">Download</a></p>
 
