--- a/post-43/index.html
+++ b/post-43/index.html
@@ -131,6 +131,7 @@
 &nbsp;4) Koty na ploty: Dakti..........<br />
 &nbsp;5) compofiller SUPREME: wermi....<br />
 &nbsp;6) Replacement Label: V0yager/Zoo<br />
+&nbsp;7) The Old School Demo: CatMan...<br />
 </code></p>
 
 <p><a href="https://negativecharge.github.io/files/speccy-pl-2022-1.ssd">Download</a></p>
