--- a/post-51/index.html
+++ b/post-51/index.html
@@ -123,7 +123,7 @@
         <h1 class="page-title">Mad Max (Jochen Hippel) - BBC Micro Conversions</h1>
         <div class="page-date"><span>2022, Aug 14&nbsp;&nbsp;&nbsp;&nbsp;</span></div>
       </header>
-      <p>Martin Galway music conversions from other platforms to the BBC Micro's SN76489.
+      <p>Jochen Hipel music conversions to the BBC Micro's SN76489.
 <br /><br /><br /><code>
 &nbsp;01 Things Go Bump Out in the Nig<br />
 &nbsp;02 There Aren't Any Sheep In Mon<br />
